# Django_For_Beginners

./: README.md
blog/: db.sqlite3  pyproject.toml
blog/accounts/: views.py
blog/blog/: tests.py  urls.py  views.py
blog/blog/migrations/: 0001_initial.py
blog/blog/models/: post.py
blog/django_project/: settings.py  urls.py
blog/static/css/: base.css
blog/staticfiles/: staticfiles.json
blog/templates/: base.html  home.html  post_delete.html  post_detail.html  post_edit.html  post_new.html
blog/templates/registration/: signup.html
ch1-setup/: db.sqlite3  pyproject.toml
ch1-setup/django_project/: settings.py
ch1-setup/pages/: urls.py  views.py
message-board/: db.sqlite3  pyproject.toml
message-board/django_project/: settings.py  urls.py
message-board/posts/: tests.py  views.py
message-board/templates/: home.html
news/: db.sqlite3  pyproject.toml
news/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
news/accounts/migrations/: 0001_initial.py
news/accounts/models/: __init__.py  customuser.py
news/articles/: admin.py  forms.py  urls.py
news/articles/migrations/: 0001_initial.py  0002_comment.py
news/articles/models/: article.py  comment.py
news/django_project/: settings.py  urls.py
news/pages/: tests.py  views.py
news/templates/: base.html  home.html
news/templates/registration/: login.html  signup.html
pages/: db.sqlite3  pyproject.toml
pages/django_project/: settings.py  urls.py
pages/pages/: tests.py  urls.py  views.py
pages/templates/: about.html  base.html  home.html
test/: style.css
(+2 files in other folders)
