[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["obamwonyi <developer.oduwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
